[gd_scene load_steps=52 format=2]

[ext_resource path="res://Level Construction Tools/Fade/Fade In.gd" type="Script" id=1]
[ext_resource path="res://Level Construction Tools/Parallax Backgrounds/Parallax Test.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level Construction Tools/Tileset Scenes/Oak Forest Tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/NoWasdPlayer.gd" type="Script" id=4]
[ext_resource path="res://Level Construction Tools/Tileset Scenes/Red Rock TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/Restart Button.gd" type="Script" id=6]
[ext_resource path="res://Audio/Music/Steve Combs - Hero.mp3" type="AudioStream" id=7]
[ext_resource path="res://Audio/Sound FX/notification_noise.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Dialogue/dialogue1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Dialogue/dialogue3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Dialogue/dialogue2.png" type="Texture" id=11]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/Input.gd" type="Script" id=12]
[ext_resource path="res://Assets/UI/restart button.png" type="Texture" id=13]
[ext_resource path="res://Level Construction Tools/NoWasdPlayer/codebot sprite sheet.png" type="Texture" id=14]
[ext_resource path="res://Audio/Sound FX/thruster_Edit_1_Export_1.mp3" type="AudioStream" id=15]
[ext_resource path="res://Audio/Sound FX/true-ghost-break-180-bpm-102898.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Dialogue/Dialogue.gd" type="Script" id=17]
[ext_resource path="res://Level Construction Tools/Teleporter/AnimatedTpGreen.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Dialogue/dialogue4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Fonts/Youmurdererbb-pwoK.otf" type="DynamicFontData" id=20]
[ext_resource path="res://Assets/Dialogue/npc_talk_thud.mp3" type="AudioStream" id=21]
[ext_resource path="res://Assets/Oakwood/decorations/shop_anim.png" type="Texture" id=22]
[ext_resource path="res://Assets/Dialogue/blank_speech.png" type="Texture" id=23]
[ext_resource path="res://Assets/Oakwood/decorations/fence_2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Oakwood/decorations/fence_1.png" type="Texture" id=25]
[ext_resource path="res://Levels/ShopDialogue.gd" type="Script" id=26]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 118, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 22 )
region = Rect2( 118, 0, 118, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 22 )
region = Rect2( 236, 0, 118, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 22 )
region = Rect2( 354, 0, 118, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 22 )
region = Rect2( 472, 0, 118, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 22 )
region = Rect2( 590, 0, 118, 128 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 104.204, 51.0017 )

[sub_resource type="DynamicFont" id=25]
resource_local_to_scene = true
size = 80
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=2]
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10.484, 18.1311 )

[sub_resource type="CapsuleShape2D" id=1]
height = 0.0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 21 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Animation" id=15]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="Forest" type="Node2D"]

[node name="Parallax" parent="." instance=ExtResource( 2 )]

[node name="Oak Forest" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 983035, 0, 0, 983036, 0, 2, 983037, 0, 2, 983038, 0, 589831, 983039, 0, 524300, 917504, 0, 524301, 917505, 0, 524300, 917506, 0, 524300, 917507, 0, 524301, 917508, 0, 524301, 917509, 0, 524300, 917510, 0, 524300, 917511, 0, 196615, 917515, 0, 196613, 917516, 0, 524300, 917517, 0, 524301, 917518, 0, 524300, 917519, 0, 524301, 917520, 0, 524300, 917521, 0, 524301, 917522, 0, 524301, 917523, 0, 524300, 917524, 0, 524300, 917525, 0, 196615, 1048571, 0, 196608, 1048572, 0, 196610, 1048573, 0, 196609, 1048574, 0, 196611 )

[node name="AnimatedTpGreen" parent="." instance=ExtResource( 18 )]
position = Vector2( 561.484, 283.451 )
frame = 1

[node name="Rock Tilemap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( -196629, 1711, 131087, -131094, 1711, 65564, -131093, 1711, 196631, -65558, 1711, 589826, -65557, 1711, 65537, -65556, 1711, 196618, -65555, 1711, 65539, -65553, 1711, 131082, -22, 1711, 589826, -21, 1711, 1245186, -20, 1711, 458781, -19, 1711, 65537, -18, 1711, 196621, -17, 1711, 196631, 65514, 1711, 786436, 65515, 1711, 262157, 65516, 1711, 196613, 65517, 1711, 1310741, 65518, 1711, 196613, 65519, 1711, 851996, 24, 1711, 15, 131050, 1711, 786436, 131051, 1711, 1310732, 131052, 1711, 1179652, 131053, 1711, 262157, 131054, 1711, 196634, 131055, 1711, 851996, 65559, 1711, 393219, 65560, 1711, 196623, 65561, 1711, 65539, 196585, 1711, 65564, 196586, 1711, 65566, 196587, 1711, 1310740, 196588, 1711, 196633, 196589, 1711, 458781, 196590, 1711, 262160, 196591, 1711, 917532, 131094, 1711, 65564, 131095, 1711, 65566, 131096, 1711, 1310740, 131097, 1711, 65537, 131098, 1711, 393245, 262121, 1711, 589826, 262122, 1711, 1310739, 262123, 1711, 1310737, 262124, 1711, 262165, 262125, 1711, 1245214, 262126, 1711, 262156, 262127, 1711, 589854, 196630, 1711, 851972, 196631, 1711, 1310730, 196632, 1711, 1310737, 196633, 1711, 262155, 196634, 1711, 65537, 196635, 1711, 65539, 327657, 1711, 589826, 327658, 1711, 196633, 327659, 1711, 1179652, 327660, 1711, 1310735, 327661, 1711, 262164, 327662, 1711, 1310733, 327663, 1711, 589854, 327677, 1710, 589831, 327678, 1710, 589844, 327679, 1710, 589845, 262144, 1710, 589841, 262145, 1710, 589836, 262146, 1710, 327690, 262162, 1711, 12, 262164, 1711, 65564, 262165, 1711, 196629, 262166, 1711, 65566, 262167, 1711, 262160, 262168, 1711, 1179652, 262169, 1711, 262157, 262170, 1711, 1310741, 262171, 1711, 655390, 262172, 1711, 655391, 393193, 1711, 589826, 393194, 1711, 262154, 393195, 1711, 1310741, 393196, 1711, 1245186, 393197, 1711, 1245186, 393198, 1711, 65536, 393199, 1711, 917532, 393213, 1710, 655363, 393214, 1710, 655369, 393215, 1710, 655370, 327680, 1710, 655386, 327681, 1710, 655371, 327682, 1710, 589851, 327698, 1711, 196616, 327699, 1711, 196624, 327700, 1711, 65566, 327701, 1711, 262155, 327702, 1711, 1310739, 327703, 1711, 262154, 327704, 1711, 1179676, 327705, 1711, 1310730, 327706, 1711, 720924, 327707, 1711, 1310750, 458729, 1711, 851972, 458730, 1711, 458755, 458731, 1711, 196614, 458732, 1711, 1310737, 458733, 1711, 1310733, 458734, 1711, 458781, 458735, 1711, 786460, 458749, 1710, 917505, 458750, 1710, 983057, 458751, 1710, 983050, 393216, 1710, 983050, 393217, 1710, 983053, 393218, 1710, 917533, 393234, 1711, 1310722, 393235, 1711, 1376281, 393236, 1711, 1376270, 393237, 1711, 1376268, 393238, 1711, 1376271, 393239, 1711, 1376282, 393240, 1711, 1376271, 393241, 1711, 1376266, 393242, 1711, 720926, 524265, 1711, 720898, 524266, 1711, 720900, 524267, 1711, 1310732, 524268, 1711, 196614, 524269, 1711, 196634, 524270, 1711, 458781, 524271, 1711, 786460, 589802, 1711, 720898, 589803, 1711, 1376271, 589804, 1711, 1376281, 589805, 1711, 1376275, 589806, 1711, 1376270, 589807, 1711, 1310750 )

[node name="ShopKeep" type="AnimatedSprite" parent="."]
position = Vector2( 390.454, 272 )
frames = SubResource( 23 )
playing = true

[node name="Fence1" type="Sprite" parent="ShopKeep"]
position = Vector2( -82.2238, 54 )
texture = ExtResource( 25 )

[node name="Fence2" type="Sprite" parent="ShopKeep"]
position = Vector2( 83.0305, 54 )
texture = ExtResource( 24 )

[node name="Area2D" type="Area2D" parent="ShopKeep"]
script = ExtResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopKeep/Area2D"]
position = Vector2( 0, 12.7801 )
shape = SubResource( 24 )

[node name="Dialogue1" type="TextureRect" parent="ShopKeep/Area2D"]
visible = false
margin_left = -111.591
margin_top = -3.93225
margin_right = 881.409
margin_bottom = 266.068
rect_scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="ShopKeep/Area2D/Dialogue1"]
anchor_left = 0.008
anchor_right = 0.832
anchor_bottom = 0.783
margin_left = 31.8976
margin_top = 38.7876
margin_right = 27.6655
margin_bottom = -13.6224
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "OGthocumule? Onstaradonzo 
zieemeansky! Dorthantos Libros?"
align = 1

[node name="ShopTalker" type="Timer" parent="ShopKeep/Area2D"]
wait_time = 4.0

[node name="NPC talk" type="AudioStreamPlayer" parent="ShopKeep/Area2D"]
stream = ExtResource( 21 )
volume_db = 7.932

[node name="NoWasdPlayer" type="KinematicBody2D" parent="."]
position = Vector2( 120.484, 320 )
script = ExtResource( 4 )

[node name="Move_Sound" type="AudioStreamPlayer" parent="NoWasdPlayer"]
stream = ExtResource( 16 )
volume_db = -28.796

[node name="Thruster" type="AudioStreamPlayer" parent="NoWasdPlayer"]
stream = ExtResource( 15 )
volume_db = 7.311

[node name="Timer" type="Timer" parent="NoWasdPlayer"]
wait_time = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="NoWasdPlayer"]
anims/Falling = SubResource( 7 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
"anims/Long Fall" = SubResource( 8 )
anims/Moving = SubResource( 4 )
"anims/Pre Idle" = SubResource( 9 )
anims/RESET = SubResource( 5 )
"anims/Typing Idle" = SubResource( 6 )

[node name="Teleport Collide Parent" type="Area2D" parent="NoWasdPlayer"]
position = Vector2( 0, -16 )

[node name="Teleport Collide" type="CollisionShape2D" parent="NoWasdPlayer/Teleport Collide Parent"]
position = Vector2( 0.483955, -7.89604 )
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="NoWasdPlayer"]
position = Vector2( 0, -16 )
texture = ExtResource( 14 )
hframes = 6
vframes = 6

[node name="Wheel Hitbox" type="CollisionShape2D" parent="NoWasdPlayer"]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Arm Hitbox" type="CollisionShape2D" parent="NoWasdPlayer"]
position = Vector2( -13, -14 )
shape = SubResource( 11 )

[node name="Arm Hitbox2" type="CollisionShape2D" parent="NoWasdPlayer"]
position = Vector2( 13, -14 )
shape = SubResource( 11 )

[node name="Torso Hitbox" type="CollisionShape2D" parent="NoWasdPlayer"]
position = Vector2( 0, -21 )
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="NoWasdPlayer"]
position = Vector2( 0, -16 )
current = true
zoom = Vector2( 0.4, 0.4 )
script = ExtResource( 17 )

[node name="Text Movement" type="Control" parent="NoWasdPlayer/Camera2D"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = -140.0
margin_right = 379.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 285 )

[node name="Background" type="PanelContainer" parent="NoWasdPlayer/Camera2D/Text Movement"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background"]
margin_right = 150.0
margin_bottom = 285.0
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 278.0
custom_constants/separation = 7

[node name="OutputTop" type="PanelContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 226.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/OutputTop"]
margin_left = 7.0
margin_top = 7.0
margin_right = 129.0
margin_bottom = 219.0
scroll_horizontal_enabled = false

[node name="TextHistory" type="VBoxContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/OutputTop/ScrollContainer"]
custom_constants/separation = 10

[node name="InputContainer" type="PanelContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 136.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 38 )

[node name="HBoxContainer" type="HBoxContainer" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 129.0
margin_bottom = 31.0

[node name="Caret" type="Label" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = ">"

[node name="Input" type="LineEdit" parent="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 122.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 13 )
max_length = 13
script = ExtResource( 12 )

[node name="Restart Button" type="Button" parent="NoWasdPlayer/Camera2D"]
margin_left = 359.0
margin_top = -153.0
margin_right = 377.052
margin_bottom = -133.0
flat = true
script = ExtResource( 6 )

[node name="Button_Texture" type="TextureRect" parent="NoWasdPlayer/Camera2D/Restart Button"]
texture = ExtResource( 13 )

[node name="DialogueTime" type="Timer" parent="NoWasdPlayer/Camera2D"]
wait_time = 5.0
autostart = true

[node name="Dialogue1" type="TextureRect" parent="NoWasdPlayer/Camera2D/DialogueTime"]
visible = false
margin_left = -100.69
margin_top = 220.451
margin_right = 997.31
margin_bottom = 445.451
rect_scale = Vector2( 0.279999, 0.279999 )
texture = ExtResource( 9 )

[node name="Dialogue2" type="TextureRect" parent="NoWasdPlayer/Camera2D/DialogueTime"]
visible = false
margin_left = -66.8414
margin_top = 194.269
margin_right = 851.159
margin_bottom = 518.269
rect_scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 11 )

[node name="Dialogue3" type="TextureRect" parent="NoWasdPlayer/Camera2D/DialogueTime"]
visible = false
margin_left = -66.8414
margin_top = 194.269
margin_right = 824.159
margin_bottom = 545.269
rect_scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 10 )

[node name="Dialogue4" type="TextureRect" parent="NoWasdPlayer/Camera2D/DialogueTime"]
visible = false
margin_left = 69.8293
margin_top = 208.0
margin_right = 960.83
margin_bottom = 559.0
rect_scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 19 )

[node name="noti" type="AudioStreamPlayer" parent="NoWasdPlayer/Camera2D/DialogueTime"]
stream = ExtResource( 8 )
volume_db = 9.695

[node name="fallTimer" type="Timer" parent="NoWasdPlayer"]
wait_time = 0.675
one_shot = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="IntroRect" type="ColorRect" parent="."]
visible = false
margin_left = -687.774
margin_top = -130.071
margin_right = 70080.2
margin_bottom = 47429.9
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="IntroRect"]
"anims/Fade In" = SubResource( 15 )
anims/RESET = SubResource( 16 )

[connection signal="area_entered" from="ShopKeep/Area2D" to="ShopKeep/Area2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ShopKeep/Area2D/ShopTalker" to="ShopKeep/Area2D" method="_on_ShopTalker_timeout"]
[connection signal="finished" from="NoWasdPlayer/Move_Sound" to="NoWasdPlayer" method="_on_Move_Sound_finished"]
[connection signal="text_entered" from="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="NoWasdPlayer" method="_on_Input_text_entered"]
[connection signal="text_entered" from="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="NoWasdPlayer/Camera2D/Text Movement/Background/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" method="_on_Input_text_entered"]
[connection signal="mouse_entered" from="NoWasdPlayer/Camera2D/Restart Button" to="NoWasdPlayer/Camera2D/Restart Button" method="_on_Restart_Button_mouse_entered"]
[connection signal="mouse_exited" from="NoWasdPlayer/Camera2D/Restart Button" to="NoWasdPlayer/Camera2D/Restart Button" method="_on_Restart_Button_mouse_exited"]
[connection signal="pressed" from="NoWasdPlayer/Camera2D/Restart Button" to="NoWasdPlayer/Camera2D/Restart Button" method="_on_Restart_Button_pressed"]
[connection signal="toggled" from="NoWasdPlayer/Camera2D/Restart Button" to="NoWasdPlayer/Camera2D/Restart Button" method="_on_Restart_Button_toggled"]
[connection signal="timeout" from="NoWasdPlayer/Camera2D/DialogueTime" to="NoWasdPlayer/Camera2D" method="_on_DialogueTime_timeout"]
[connection signal="timeout" from="NoWasdPlayer/fallTimer" to="NoWasdPlayer" method="_on_fallTimer_timeout"]
[connection signal="animation_finished" from="IntroRect/AnimationPlayer" to="IntroRect" method="_on_AnimationPlayer_animation_finished"]
